feat(api): update controller, add post and add surau function
