# apps/api/src/controllers/surauController.ts
@@ -1,5 +1,6 @@
-import {Delete, Get, Patch, Route} from 'tsoa'
-import { getAllSurau, updateSurau, removeSurau, getSurau } from '../db/surau'
+import {Body, Delete, Get, Patch, Post, Route} from 'tsoa'
+import { getAllSurau, updateSurau, removeSurau, getSurau, addSurau } from '../db/surau'
+import { Surau } from '../types/surau'
 
 type SurauResponse = {
     name: string
@@ -23,6 +24,11 @@ export default class SurauController {
     @Get('/:id')
     public async getOneSurau(id: string): Promise<SurauResponse> {
         const data = await getSurau(id)
+        return data
+    }
+    @Post()
+    public async postSurau(@Body() surauData: Surau): Promise<SurauResponse> {
+        const data = await addSurau(surauData)
         return data
     }
     @Patch('/:id')
